modify prompt & fix llama based model

--- a/docker/DOCKERFILE
+++ b/docker/DOCKERFILE
@@ -5,3 +5,4 @@ RUN python3 -m pip install -U --no-cache-dir omegaconf
 RUN python3 -m pip install -U --no-cache-dir pycountry
 RUN python3 -m pip install -U --no-cache-dir seqeval
 RUN python3 -m pip install -U --no-cache-dir ipywidgets
+RUN python3 -m pip install -U --no-cache-dir pytablewriter
