--- a/docker/DOCKERFILE
+++ b/docker/DOCKERFILE
@@ -6,3 +6,4 @@ RUN python3 -m pip install -U --no-cache-dir pycountry
 RUN python3 -m pip install -U --no-cache-dir seqeval
 RUN python3 -m pip install -U --no-cache-dir ipywidgets
 RUN python3 -m pip install -U --no-cache-dir pytablewriter
+RUN python3 -m pip install -U --no-cache-dir git+https://github.com/Tiiiger/bert_score
