--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "src/financial-evaluation"]
 	path = src/financial-evaluation
 	url = https://github.com/chancefocus/financial-evaluation.git
+[submodule "src/metrics/GPTScore"]
+	path = src/metrics/GPTScore
+	url = https://github.com/jinlanfu/GPTScore.git
+[submodule "src/metrics/BARTScore"]
+	path = src/metrics/BARTScore
+	url = https://github.com/neulab/BARTScore.git
