--- a/docker/DOCKERFILE
+++ b/docker/DOCKERFILE
@@ -1,4 +1,4 @@
-FROM tothemoon/llm
+FROM tothemoon/belle:20230721
 
 RUN python3 -m pip install -U --no-cache-dir sqlitedict
 RUN python3 -m pip install -U --no-cache-dir omegaconf
@@ -6,4 +6,3 @@ RUN python3 -m pip install -U --no-cache-dir pycountry
 RUN python3 -m pip install -U --no-cache-dir seqeval
 RUN python3 -m pip install -U --no-cache-dir ipywidgets
 RUN python3 -m pip install -U --no-cache-dir pytablewriter
-RUN python3 -m pip install -U --no-cache-dir git+https://github.com/Tiiiger/bert_score
